--- a/files/misc.bib
+++ b/files/misc.bib
@@ -45,14 +45,6 @@
 url={https://doi.org/10.5281/zenodo.3858032}
 }
 
-@article{ma2020world,
-  title={World of Code: Enabling a Research Workflow for Mining and Analyzing the Universe of Open Source VCS data},
-  author={Ma, Yuxing and Dey, Tapajit and Bogart, Chris and Amreen, Sadika and Valiev, Marat and Tutko, Adam and Kennard, David and Zaretzki, Russell and Mockus, Audris},
-  journal={arXiv preprint arXiv:2010.16196},
-  year={2020},
-url={https://arxiv.org/pdf/2010.16196}
-}
-
 
 @article{dey2020representation,
   title={Representation of Developer Expertise in Open Source Software},
@@ -60,4 +52,20 @@ url={https://arxiv.org/pdf/2010.16196}
   journal={arXiv preprint arXiv:2005.10176},
   year={2020},
 url={https://arxiv.org/pdf/2005.10176}
+}
+
+@article{imam2021secret,
+  title={The Secret Life of Hackathon Code},
+  author={Imam, Ahmed and Dey, Tapajit and Nolte, Alexander and Mockus, Audris and Herbsleb, James D},
+  journal={arXiv preprint arXiv:2103.01145},
+  year={2021},
+url={https://arxiv.org/abs/2103.01145}
+}
+
+@article{imam2021tracking,
+  title={Tracking Hackathon Code Creation and Reuse},
+  author={Imam, Ahmed and Dey, Tapajit},
+  journal={arXiv preprint arXiv:2103.10167},
+  year={2021},
+url={https://arxiv.org/abs/2103.10167}
 }
