--- a/files/pubs.bib
+++ b/files/pubs.bib
@@ -1,3 +1,14 @@
+@article{ma2021world,
+title={World of code: enabling a research workflow for mining and analyzing the universe of open source VCS data},
+author={Ma, Yuxing and Dey, Tapajit and Bogart, Chris and Amreen, Sadika and Valiev, Marat and Tutko, Adam and Kennard, David and Zaretzki, Russell and Mockus, Audris},
+journal={Empirical Software Engineering},
+volume={26},
+number={2},
+pages={1--42},
+year={2021},
+publisher={Springer},
+url={https://doi.org/10.1007/s10664-020-09905-9}
+}
 @inproceedings{dey2020pullrequest,
 author = {Dey, Tapajit and Mockus, Audris},
 title = {Effect of Technical and Social Factors on Pull Request Quality for the NPM Ecosystem},
