--- a/files/misc.bib
+++ b/files/misc.bib
@@ -45,27 +45,20 @@
 url={https://doi.org/10.5281/zenodo.3858032}
 }
 
-
-@article{dey2020representation,
-  title={Representation of Developer Expertise in Open Source Software},
-  author={Dey, Tapajit and Karnauch, Andrey and Mockus, Audris},
-  journal={arXiv preprint arXiv:2005.10176},
-  year={2020},
-url={https://arxiv.org/pdf/2005.10176}
+@inproceedings{dey2021replication,
+title={Replication package for representation of developer expertise in open source software},
+author={Dey, Tapajit and Karnauch, Andrey and Mockus, Audris},
+booktitle={2021 IEEE/ACM 43rd International Conference on Software Engineering: Companion Proceedings (ICSE-Companion)},
+pages={236--237},
+year={2021},
+organization={IEEE},
+url={https://doi.org/10.5281/zenodo.4457107}
 }
 
-@article{imam2021secret,
-  title={The Secret Life of Hackathon Code},
-  author={Imam, Ahmed and Dey, Tapajit and Nolte, Alexander and Mockus, Audris and Herbsleb, James D},
-  journal={arXiv preprint arXiv:2103.01145},
-  year={2021},
-url={https://arxiv.org/abs/2103.01145}
-}
-
-@article{imam2021tracking,
-  title={Tracking Hackathon Code Creation and Reuse},
-  author={Imam, Ahmed and Dey, Tapajit},
-  journal={arXiv preprint arXiv:2103.10167},
-  year={2021},
-url={https://arxiv.org/abs/2103.10167}
+@article{dey2022knights,
+title={Knights and Gold Stars: A Case Study of InnerSource Incentivization},
+author={Dey, Tapajit and Jiang, Ning Willem and Fitzgerald, Brian},
+year={2022},
+publisher={TechRxiv},
+url={https://www.techrxiv.org/articles/preprint/Knights_and_Gold_Stars_A_Case_Study_of_InnerSource_Incentivization/19406609/1/files/34550978.pdf}
 }
