update on Sep 2022

--- a/files/misc.bib
+++ b/files/misc.bib
@@ -56,9 +56,16 @@ url={https://doi.org/10.5281/zenodo.4457107}
 }
 
 @article{dey2022knights,
-title={Knights and Gold Stars: A Case Study of InnerSource Incentivization},
-author={Dey, Tapajit and Jiang, Ning Willem and Fitzgerald, Brian},
-year={2022},
-publisher={TechRxiv},
-url={https://www.techrxiv.org/articles/preprint/Knights_and_Gold_Stars_A_Case_Study_of_InnerSource_Incentivization/19406609/1/files/34550978.pdf}
+  title={Knights and Gold Stars: A Tale of InnerSource Incentivization},
+  author={Dey, Tapajit and Jiang, Willem and Fitzgerald, Brian},
+  journal={arXiv preprint arXiv:2207.08475},
+  year={2022}
+}
+
+@article{samir2022one,
+  title={One-off Events? An Empirical Study of Hackathon Code Creation and Reuse},
+  author={Samir Imam Mahmoud, Ahmed and Dey, Tapajit and Nolte, Alexander and Mockus, Audris and Herbsleb, James D},
+  journal={arXiv e-prints},
+  pages={arXiv--2207},
+  year={2022}
 }
