--- a/files/pubs.bib
+++ b/files/pubs.bib
@@ -1,3 +1,24 @@
+@ARTICLE{9904025,  
+author={Dey, Tapajit and Jiang, Willem and Fitzgerald, Brian},  
+journal={IEEE Software},   
+title={Knights and Gold Stars: A Tale of InnerSource Incentivization},   
+year={2022},  
+volume={},  
+number={},  
+pages={2-12},  
+doi={10.1109/MS.2022.3192647}}
+
+@article{mahmoud2022one,
+  title={One-off events? An empirical study of hackathon code creation and reuse},
+  author={Mahmoud, Ahmed Samir Imam and Dey, Tapajit and Nolte, Alexander and Mockus, Audris and Herbsleb, James D},
+  journal={Empirical Software Engineering},
+  volume={27},
+  number={7},
+  pages={1--49},
+  year={2022},
+  publisher={Springer}
+}
+
 @INPROCEEDINGS{dey2021skillspace,
 author={Dey, Tapajit and Karnauch, Andrey and Mockus, Audris},
 booktitle={2021 IEEE/ACM 43rd International Conference on Software Engineering (ICSE)}, 
